[package]
authors = ["Miguel Rodríguez Pérez <miguel@det.uvigo.gal>"]
description = "A simple solution to the second programming exercise of the CN subject for course 2022–2023"
license = "GPL-3.0-or-later"
name = "tcpmt"
version = "0.2.1"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive", "wrap_help"] }
num_enum = "0.6.0"
regex = "1.7.3"
socket2 = "0.5.1"
thiserror = "1.0.40"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
