[package]
authors = ["Miguel Rodríguez Pérez <miguel@det.uvigo.gal>"]
description = "A simple solution to the second programming exercise of the CN subject for course 2022–2023"
license = "GPL-3.0-or-later"
name = "tcpmt"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive", "wrap_help"] }
num_enum = "0.7"
regex = "1.11.1"
socket2 = "0.5.9"
thiserror = "2.0"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
